--- a/assets/css/gallery-carousel.css
+++ b/assets/css/gallery-carousel.css
@@ -1,12 +1,12 @@
-.jp-carousel-wrap * {
+.tztk-carousel-wrap * {
 	line-height:inherit; /* prevent declarations of line-height in the universal selector */
 }
 
-.jp-carousel-overlay {
+.tztk-carousel-overlay {
 	background: #000;
 }
 
-div.jp-carousel-fadeaway {
+div.tztk-carousel-fadeaway {
 	background: -moz-linear-gradient(bottom, rgba(0,0,0,0.5), rgba(0,0,0,0));
 	background: -webkit-gradient(linear, left bottom, left top, from(rgba(0,0,0,0.5)), to(rgba(0,0,0,0)));
 	position: fixed;
@@ -16,7 +16,7 @@ div.jp-carousel-fadeaway {
 	height: 15px;
 }
 
-.jp-carousel-msg {
+.tztk-carousel-msg {
 	font-family: "Open Sans", sans-serif;
 	font-style: normal;
 	display: inline-block;
@@ -31,41 +31,41 @@ div.jp-carousel-fadeaway {
 	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.1);
 }
 
-.jp-carousel-wrap {
+.tztk-carousel-wrap {
 	font-family: "Helvetica Neue", sans-serif !important;
 }
 
-.jp-carousel-info {
+.tztk-carousel-info {
 	position: absolute;
 	bottom: 0;
 	text-align: left !important;
 	-webkit-font-smoothing: subpixel-antialiased !important;
 }
 
-.jp-carousel-info ::selection {
+.tztk-carousel-info ::selection {
 	background: #68c9e8; /* Safari */
 	color: #fff;
 	}
 
-.jp-carousel-info ::-moz-selection {
+.tztk-carousel-info ::-moz-selection {
 	background: #68c9e8; /* Firefox */
 	color: #fff;
 }
 
-.jp-carousel-photo-info {
+.tztk-carousel-photo-info {
 	position: relative;
 	left: 25%;
 	width: 50%;
 }
 
-.jp-carousel-transitions .jp-carousel-photo-info {
+.tztk-carousel-transitions .tztk-carousel-photo-info {
 	-webkit-transition: 400ms ease-out;
 	-moz-transition: 400ms ease-out;
 	-o-transition: 400ms ease-out;
 	transition: 400ms ease-out;
 }
 
-.jp-carousel-info h2 {
+.tztk-carousel-info h2 {
 	background: none !important;
 	border: none !important;
 	color: #999;
@@ -81,14 +81,14 @@ div.jp-carousel-fadeaway {
 	-webkit-font-smoothing: subpixel-antialiased;
 }
 
-.jp-carousel-next-button,
-.jp-carousel-previous-button {
+.tztk-carousel-next-button,
+.tztk-carousel-previous-button {
 	overflow: hidden;
 	cursor: pointer;
 }
 
-.jp-carousel-next-button span,
-.jp-carousel-previous-button span {
+.tztk-carousel-next-button span,
+.tztk-carousel-previous-button span {
 	position: absolute;
 	top: 0;
 	bottom: 0;
@@ -98,16 +98,16 @@ div.jp-carousel-fadeaway {
 	opacity: 0.2;
 }
 
-.jp-carousel-transitions .jp-carousel-next-button span,
-.jp-carousel-transitions .jp-carousel-previous-button span {
+.tztk-carousel-transitions .tztk-carousel-next-button span,
+.tztk-carousel-transitions .tztk-carousel-previous-button span {
 	-webkit-transition: 500ms opacity ease-out;
 	-moz-transition: 500ms opacity ease-out;
 	-o-transition: 500ms opacity ease-out;
 	transition: 500ms opacity ease-out;
 }
 
-.jp-carousel-next-button span:before,
-.jp-carousel-previous-button span:before {
+.tztk-carousel-next-button span:before,
+.tztk-carousel-previous-button span:before {
 	position: absolute;
 	display: inline-block;
 	width: 82px;
@@ -124,29 +124,29 @@ div.jp-carousel-fadeaway {
 	text-indent: -24px;
 }
 
-.jp-carousel-next-button span:before {
+.tztk-carousel-next-button span:before {
 	content: "\f345";
 }
 
-.jp-carousel-previous-button span:before {
+.tztk-carousel-previous-button span:before {
 	content: "\f341";
 }
 
-.jp-carousel-next-button:hover span,
-.jp-carousel-previous-button:hover span {
+.tztk-carousel-next-button:hover span,
+.tztk-carousel-previous-button:hover span {
 	filter: alpha(opacity=60);
 	opacity: 0.6;
 }
 
-.jp-carousel-next-button span {
+.tztk-carousel-next-button span {
 	right: 0;
 }
 
-.jp-carousel-previous-button span {
+.tztk-carousel-previous-button span {
 	left: 0;
 }
 
-.jp-carousel-buttons {
+.tztk-carousel-buttons {
 	margin:-18px -20px 15px;
 	padding:8px 10px;
 	border-bottom:1px solid #222;
@@ -154,7 +154,7 @@ div.jp-carousel-fadeaway {
 	text-align: center;
 }
 
-div.jp-carousel-buttons a {
+div.tztk-carousel-buttons a {
 	border: none !important;
 	color: #999;
 	font: normal 11px/1.2em "Helvetica Neue", sans-serif !important;
@@ -166,27 +166,27 @@ div.jp-carousel-buttons a {
 	-webkit-font-smoothing: subpixel-antialiased;
 }
 
-div.jp-carousel-buttons a:hover {
+div.tztk-carousel-buttons a:hover {
 	color: #68c9e8;
 	border: none !important;
 }
 
-.jp-carousel-transitions div.jp-carousel-buttons a:hover {
+.tztk-carousel-transitions div.tztk-carousel-buttons a:hover {
 	-webkit-transition: none !important;
 	-moz-transition: none !important;
 	-o-transition: none !important;
 	transition: none !important;
 }
 
-.jp-carousel-slide, .jp-carousel-slide img, .jp-carousel-next-button,
-.jp-carousel-previous-button {
+.tztk-carousel-slide, .tztk-carousel-slide img, .tztk-carousel-next-button,
+.tztk-carousel-previous-button {
 	-webkit-transform:translate3d(0, 0, 0);
 	-moz-transform:translate3d(0, 0, 0);
 	-o-transform:translate3d(0, 0, 0);
 	-ms-transform:translate3d(0, 0, 0);
 }
 
-.jp-carousel-slide {
+.tztk-carousel-slide {
 	position:fixed;
 	width:0;
 	bottom:0;
@@ -198,25 +198,25 @@ div.jp-carousel-buttons a:hover {
 	-o-border-radius:2px;
 }
 
-.jp-carousel-transitions .jp-carousel-slide {
+.tztk-carousel-transitions .tztk-carousel-slide {
 	-webkit-transition: 300ms ease-out;
 	-moz-transition: 300ms ease-out;
 	-o-transition: 300ms ease-out;
 	transition: 300ms ease-out;
 }
 
-.jp-carousel-slide.selected {
+.tztk-carousel-slide.selected {
 	position: absolute !important;
 	filter: alpha(opacity=100);
 	opacity: 1;
 }
 
-.jp-carousel-slide {
+.tztk-carousel-slide {
 	filter: alpha(opacity=25);
 	opacity: 0.25;
 }
 
-.jp-carousel-slide img {
+.tztk-carousel-slide img {
 	display: block;
 	width: 100% !important;
 	height: 100% !important;
@@ -231,14 +231,14 @@ div.jp-carousel-buttons a:hover {
 	zoom: 1;
 }
 
-.jp-carousel-transitions .jp-carousel-slide {
+.tztk-carousel-transitions .tztk-carousel-slide {
 	-webkit-transition: opacity 400ms linear;
 	-moz-transition: opacity 400ms linear;
 	-o-transition: opacity 400ms linear;
 	transition: opacity 400ms linear;
 }
 
-.jp-carousel-close-hint {
+.tztk-carousel-close-hint {
 	color: #999;
 	cursor: default;
 	letter-spacing: 0 !important;
@@ -248,14 +248,14 @@ div.jp-carousel-buttons a:hover {
 	width: 90%;
 }
 
-.jp-carousel-transitions .jp-carousel-close-hint {
+.tztk-carousel-transitions .tztk-carousel-close-hint {
 	-webkit-transition: color 200ms linear;
 	-moz-transition: color 200ms linear;
 	-o-transition: color 200ms linear;
 	transition: color 200ms linear;
 }
 
-.jp-carousel-close-hint span {
+.tztk-carousel-close-hint span {
 	cursor: pointer;
 	background-color: black;
 	background-color: rgba(0,0,0,0.8);
@@ -272,25 +272,25 @@ div.jp-carousel-buttons a:hover {
 	border-radius: 4px;
 }
 
-.jp-carousel-transitions .jp-carousel-close-hint span {
+.tztk-carousel-transitions .tztk-carousel-close-hint span {
 	-webkit-transition: border-color 200ms linear;
 	-moz-transition: border-color 200ms linear;
 	-o-transition: border-color 200ms linear;
 	transition: border-color 200ms linear;
 }
 
-.jp-carousel-close-hint:hover {
+.tztk-carousel-close-hint:hover {
 	cursor: default;
 	color: #fff;
 }
 
-.jp-carousel-close-hint:hover span {
+.tztk-carousel-close-hint:hover span {
 	border-color: #fff;
 }
 
 
 /** Title and Desc Start **/
-.jp-carousel-titleanddesc {
+.tztk-carousel-titleanddesc {
 	border-top: 1px solid #222;
 	color: #999;
 	font-size: 15px;
@@ -298,7 +298,7 @@ div.jp-carousel-buttons a:hover {
 	margin-bottom: 0;
 	font-weight:400;
 }
-.jp-carousel-titleanddesc-title {
+.tztk-carousel-titleanddesc-title {
 	font: 300 1.5em/1.1 "Helvetica Neue", sans-serif !important;
 	text-transform: none !important; /* prevents uppercase from leaking through */
 	color: #fff;
@@ -306,14 +306,14 @@ div.jp-carousel-buttons a:hover {
 	padding:0;
 }
 
-.jp-carousel-titleanddesc-desc p {
+.tztk-carousel-titleanddesc-desc p {
 	color: #999;
 	line-height:1.4;
 	margin-bottom: 0;
 }
 
-.jp-carousel-titleanddesc p a,
-.jp-carousel-info h2 a {
+.tztk-carousel-titleanddesc p a,
+.tztk-carousel-info h2 a {
 	color: #fff !important;
 	border: none !important;
 	text-decoration: underline !important;
@@ -321,38 +321,38 @@ div.jp-carousel-buttons a:hover {
 	font-style: normal !important;
 }
 
-.jp-carousel-titleanddesc p strong,
-.jp-carousel-titleanddesc p b {
+.tztk-carousel-titleanddesc p strong,
+.tztk-carousel-titleanddesc p b {
 	font-weight: bold;
 	color: #999;
 }
 
-.jp-carousel-titleanddesc p em,
-.jp-carousel-titleanddesc p i {
+.tztk-carousel-titleanddesc p em,
+.tztk-carousel-titleanddesc p i {
 	font-style: italic;
 	color: #999;
 }
 
 
-.jp-carousel-titleanddesc p a:hover,
-.jp-carousel-info h2 a:hover {
+.tztk-carousel-titleanddesc p a:hover,
+.tztk-carousel-info h2 a:hover {
 	color: #68c9e8 !important;
 }
 
-.jp-carousel-titleanddesc p:empty {
+.tztk-carousel-titleanddesc p:empty {
 	display: none;
 }
 
-.jp-carousel-photo-info h1:before,
-.jp-carousel-photo-info h1:after,
-.jp-carousel-left-column-wrapper h1:before,
-.jp-carousel-left-column-wrapper h1:after {
+.tztk-carousel-photo-info h1:before,
+.tztk-carousel-photo-info h1:after,
+.tztk-carousel-left-column-wrapper h1:before,
+.tztk-carousel-left-column-wrapper h1:after {
 	content:none !important;
 }
 /** Title and Desc End **/
 
 /** Meta Box Start **/
-.jp-carousel-image-meta {
+.tztk-carousel-image-meta {
 	background: #111;
 	border: 1px solid #222;
 	color: #fff;
@@ -363,7 +363,7 @@ div.jp-carousel-buttons a:hover {
 	width: 209px !important;
 }
 
-a.jp-carousel-image-download {
+a.tztk-carousel-image-download {
 	display: inline-block;
 	clear: both;
 	color: #999;
@@ -374,7 +374,7 @@ a.jp-carousel-image-download {
 	background-position: 0 -82px;
 }
 
-a.jp-carousel-image-download:before {
+a.tztk-carousel-image-download:before {
 	display: inline-block;
 	margin: 0 5px 0 0;
 	font-family: 'Dashicons';
@@ -388,18 +388,18 @@ a.jp-carousel-image-download:before {
 	content: "\f504";
 }
 
-a.jp-carousel-image-download span.photo-size {
+a.tztk-carousel-image-download span.photo-size {
 	font-size: 11px;
 	border-radius: 1em;
 	margin-left: 2px;
 	display: inline-block;
 }
 
-a.jp-carousel-image-download span.photo-size-times {
+a.tztk-carousel-image-download span.photo-size-times {
 	padding: 0 1px 0 2px;
 }
 
-a.jp-carousel-image-download:hover {
+a.tztk-carousel-image-download:hover {
 	background-position: 0 -122px;
 	color: #68c9e8;
 	border: none !important;
@@ -411,19 +411,19 @@ a.jp-carousel-image-download:hover {
 /* Small screens */
 @media only screen and (max-width: 760px) {
 
-	.jp-carousel-info {
+	.tztk-carousel-info {
 		margin: 0 10px !important;
 	}
 
-	.jp-carousel-next-button, .jp-carousel-previous-button {
+	.tztk-carousel-next-button, .tztk-carousel-previous-button {
 		display: none !important;
 	}
 
-	.jp-carousel-buttons {
+	.tztk-carousel-buttons {
 		display: none !important;
 	}
 
-	.jp-carousel-image-meta {
+	.tztk-carousel-image-meta {
 		float: none !important;
 		width: 100% !important;
 		-moz-box-sizing:border-box;
@@ -431,40 +431,40 @@ a.jp-carousel-image-download:hover {
 		box-sizing: border-box;
 	}
 
-	.jp-carousel-close-hint {
+	.tztk-carousel-close-hint {
 	 	font-weight: 800 !important;
 		font-size: 26px !important;
 		position: fixed !important;
 		top: -10px;
 	}
 
-	.jp-carousel-slide img {
+	.tztk-carousel-slide img {
 		filter: alpha(opacity=100);
 		opacity: 1;
 	}
 
-	.jp-carousel-wrap {
+	.tztk-carousel-wrap {
 		background-color: #000;
 	}
 
-	.jp-carousel-fadeaway {
+	.tztk-carousel-fadeaway {
 		display: none;
 	}
 
-	.jp-carousel-titleanddesc {
+	.tztk-carousel-titleanddesc {
 		padding-top: 0 !important;
 		border: none !important;
 	}
-	.jp-carousel-titleanddesc-title {
+	.tztk-carousel-titleanddesc-title {
 		font-size: 1em !important;
 	}
 
-	.jp-carousel-left-column-wrapper {
+	.tztk-carousel-left-column-wrapper {
 		padding: 0;
 		width: 100% !important;
 	}
 
-	.jp-carousel-photo-info {
+	.tztk-carousel-photo-info {
 		left: 0 !important;
 		width: 100% !important;
 	}
