--- a/assets/css/themezee-addons.css
+++ b/assets/css/themezee-addons.css
@@ -1,5 +1,17 @@
-
-/* Clearing Floats */
+/*
+ * ThemeZee Addons CSS
+ *
+ * Copyright(C) 2015, ThemeZee.com - support@themezee.com
+ * License: GPL v3
+ * License URI: http://www.gnu.org/licenses/gpl-3.0.html
+ *
+ * @package ThemeZee Toolkit
+ */
+ 
+ 
+/*--------------------------------------------------------------
+# Clearing Floats
+---------------------------------------------------------------- */
 .themezee-addons-clearfix:before, 
 .themezee-addons-clearfix:after {  
 	content: " ";
@@ -14,7 +26,10 @@
     *zoom: 1; /* For IE 6/7 only */  
 }
 
-/* Layout */
+
+/*--------------------------------------------------------------
+# Basic Layout
+---------------------------------------------------------------- */
 #themezee-addons-overview {
 	max-width: 1100px;
 }
@@ -39,7 +54,10 @@
 	margin: 2em 0 1em;
 }
 
-/* Add-on Overview List */
+
+/*--------------------------------------------------------------
+# Add-on Overview List
+---------------------------------------------------------------- */
 #themezee-addons-list {
 	margin-top: 30px;
 }
@@ -91,6 +109,10 @@
 #themezee-addons-list dd p {
 	margin: 0 0 12px;
 }
+
+/*--------------------------------------------------------------
+# Media Queries
+---------------------------------------------------------------- */
 
 /* Media Query | <1200px */
 @media only screen and (max-width: 1200px) {
