--- a/assets/css/rtl/widget-visibility-rtl.css
+++ b/assets/css/rtl/widget-visibility-rtl.css
@@ -1,9 +1,9 @@
 /*
- * Widget Visibility CSS
+ * Widget Visibility RTL CSS
  *
  * @package ThemeZee Toolkit
  */
-
+ 
 .wp-customizer  .expanded .widget-conditional .widget-conditional-inner {
 	width: 98%;
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
@@ -52,7 +52,7 @@
 	margin-top: -20px;
 }
 .widget-conditional .selection {
-	margin-right: 70px;
+	margin-left: 70px;
 }
 .widget-conditional .conditions-rule-has-children {
 	display: block;
@@ -69,7 +69,7 @@
 }
 
 .wp-core-ui .button.display-options {
-	margin-right: 5px;
+	margin-left: 5px;
 }
 .wp-core-ui .button.display-options:hover {
 	text-decoration: none;
