--- a/assets/css/themezee-plugins.css
+++ b/assets/css/themezee-plugins.css
@@ -60,6 +60,7 @@
 ---------------------------------------------------------------- */
 #themezee-plugins-list {
 	margin-top: 30px;
+	margin-right: -20px;
 }
 
 #themezee-plugins-list dl {
@@ -70,6 +71,10 @@
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+}
+
+#themezee-plugins-list dl:nth-child(2n + 1) {
+	clear: left;
 }
 
 #themezee-plugins-list dt {
@@ -110,6 +115,10 @@
 	margin: 0 0 12px;
 }
 
+#themezee-plugins-list dd p cite {
+	display: none;
+}
+
 /*--------------------------------------------------------------
 # Media Queries
 ---------------------------------------------------------------- */
@@ -118,16 +127,30 @@
 @media only screen and (max-width: 1200px) {
 
 }
+
 /* Media Query | <980px */
 @media only screen and (max-width: 980px) {
 
 }
+
 /* Media Query | <782px */
 @media only screen and (max-width: 782px) {
 
-
 }
+
 /* Media Query | <600px */
 @media only screen and (max-width: 600px) {
-
+	
+	#themezee-plugins-list {
+		margin-top: 20px;
+		margin-right: 0;
+	}
+	
+	#themezee-plugins-list dl {
+		float: none;
+		padding: 0;
+		margin-bottom: 10px;
+		width: 100%;
+	}
+	
 }
